--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -24,7 +24,7 @@ The proposal excludes upgrades tied to Ethereum’s transition to Proof-of-Stake
 #### Included in Olympia Upgrade
 
 - **EIP-1559 – Fee Market Change**
-Introduces a new transaction type with a dynamically adjusting base fee per gas, which is burned each block, along with an optional tip to incentivize miners. This mechanism improves fee market efficiency, reduces volatility in gas pricing, and establishes a foundation for a sustainable block space economy on Ethereum Classic.
+Introduces a new transaction type with a dynamically adjusting base fee per gas and an optional priority tip to incentivize miners. On Ethereum Classic, instead of being burned, the `basefee` is redirected to the **Olympia Treasury**, an open on-chain development fund. This design aligns incentives between developers, miners, and users by converting transaction demand into sustainable network funding. As ETC's block reward continues to decline under ECIP-1017 monetary policy, this mechanism ensures the network retains a long-term **security and development budget** tied directly to economic activity on-chain.
 
 - **EIP-3198 – BASEFEE Opcode**
 Adds a new opcode that allows smart contracts to access the current block’s basefee, as defined by EIP-1559. This enables more accurate on-chain gas estimation and supports modern fee-aware applications.
@@ -53,17 +53,23 @@ These changes provide three core benefits:
 
 By narrowing the technical gap between Ethereum Classic and other EVM networks, Olympia enables ETC to remain a credible and interoperable smart contract platform while preserving its unique commitment to Proof-of-Work and protocol immutability.
 
+1. Sustainable Development Incentives – Redirecting the `basefee` to the Olympia Treasury enables Ethereum Classic to fund open-source development and long-term protocol maintenance without inflating supply. This ensures that, as block rewards decline under ECIP-1017, the network retains a credible on-chain security and innovation budget.
+
+
 ### Specification
 
 The Olympia upgrade activates the following EIPs on the Ethereum Classic network. Technical specifications and implementation details are defined in the canonical EIP documentation:
 
 #### Included from London Hard Fork
 
-[EIP-1559](https://eips.ethereum.org/EIPS/eip-1559) – Fee Market Change
-Introduces a new transaction type with a dynamic basefee, burned per block, and optional miner tip.
+[EIP-1559](https://eips.ethereum.org/EIPS/eip-1559) – Fee Market Change  
+Introduces a new transaction type with a dynamic `basefee`, redirected per block to the Olympia Treasury, and an optional miner tip.
 
 [EIP-3198](https://eips.ethereum.org/EIPS/eip-3198) – BASEFEE Opcode
 Adds the BASEFEE opcode (0x48) to the EVM, allowing smart contracts to query the current block’s base fee.
+
+On Ethereum Classic, the `basefee` is not burned but redirected to a dedicated smart contract known as the **Olympia Treasury**. This contract accumulates protocol-level fee revenue to fund ecosystem development and security, and is governed transparently via on-chain processes.
+
 
 No additional changes beyond these EIPs are included in the Olympia upgrade. Clients should adhere strictly to the behavior defined in the linked specifications.
 
@@ -140,6 +146,15 @@ This table documents EIPs reviewed but excluded from the Olympia upgrade. EIPs a
 |                        | 7691    | Blob throughput increase                           | Omit    | Blob infra not present on ETC                  |
 |                        | 7702    | Set EOA account code                               | Omit    | Not required on ETC                            |
 |                        | 7840    | Blob schedule in EL config                         | Omit    | Blob txs not supported on ETC                  |
+
+
+### Backwards Compatibility
+
+The Olympia upgrade introduces a new transaction type and an additional EVM opcode. Legacy transactions and deployed contracts will continue to function without modification. However, nodes that do not upgrade will fall out of consensus once the fork is activated.
+
+### Security Considerations
+
+No new consensus-critical vulnerabilities are introduced by this upgrade. The `BASEFEE` opcode and EIP-1559 transaction format have been widely adopted and audited across the EVM ecosystem. Core-Geth implementers are advised to validate integration against existing test vectors and consensus tests.
 
 ## Copyright
 
