--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -1,17 +1,20 @@
 ---
 lang: en
 ecip: 1111
-title:  Olympia EVM and Protocol Upgrades
+title: Olympia EVM and Protocol Upgrades
 status: Draft
-type: Meta
+type: Standards Track
+category: Core
+layer: Consensus (hard fork)
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-04-30
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
+license: CC0-1.0
 ---
 
 ### Simple Summary
 
-This proposal activates select Ethereum protocol upgrades on Ethereum Classic via a hard fork named Olympia. Specifically, it introduces EIP-1559 and EIP-3198 to improve fee market efficiency and EVM compatibility. The goal is to enhance interoperability with the broader Ethereum ecosystem while preserving Ethereum Classic's Proof-of-Work consensus and core principles.
+This proposal activates select Ethereum protocol upgrades on Ethereum Classic via a hard fork named Olympia. Specifically, it introduces EIP-1559 and EIP-3198 to enhance Ethereum Classic’s EVM compatibility, improve gas pricing, and redirect the basefee to an open, decentralized, and permissionless on-chain treasury for sustainable development funding. The goal is to enhance interoperability with the broader Ethereum ecosystem while preserving Ethereum Classic's Proof-of-Work consensus and core principles.
 
 ### Abstract
 
@@ -43,18 +46,15 @@ For full technical specifications, see the Specification section below.
 
 The Olympia upgrade seeks to advance Ethereum Classic’s protocol capabilities by adopting proven Ethereum Virtual Machine (EVM) enhancements introduced by the Ethereum Foundation. By implementing EIP-1559 and EIP-3198, Ethereum Classic will gain compatibility with modern transaction formats and smart contract expectations used across the broader EVM ecosystem.
 
-These changes provide three core benefits:
+These changes provide four core benefits:
 
-1. EVM Compatibility – Developers can deploy EVM-standard dApps on Ethereum Classic without modification or workarounds, reducing friction and encouraging cross-chain application portability.
+1. **EVM Compatibility** – Developers can deploy EVM-standard dApps on Ethereum Classic without modification or workarounds, reducing friction and encouraging cross-chain application portability.
 
-1. Fee Market Modernization – EIP-1559 introduces a predictable and more user-friendly gas pricing mechanism, aligning ETC with fee market improvements already adopted by major EVM chains.
+2. **Fee Market Modernization** – EIP-1559 introduces a predictable and more user-friendly gas pricing mechanism, aligning ETC with fee market improvements already adopted by major EVM chains.
 
-1. Network Utility and Adoption – Aligning with the broader EVM roadmap ensures Ethereum Classic remains relevant for developers, tooling providers, infrastructure teams, and users seeking a Proof-of-Work alternative to Ethereum.
+3. **Network Utility and Adoption** – Aligning with the broader EVM roadmap ensures Ethereum Classic remains relevant for developers, tooling providers, infrastructure teams, and users seeking a Proof-of-Work alternative to Ethereum.
 
-By narrowing the technical gap between Ethereum Classic and other EVM networks, Olympia enables ETC to remain a credible and interoperable smart contract platform while preserving its unique commitment to Proof-of-Work and protocol immutability.
-
-1. Sustainable Development Incentives – Redirecting the `basefee` to the Olympia Treasury enables Ethereum Classic to fund open-source development and long-term protocol maintenance without inflating supply. This ensures that, as block rewards decline under ECIP-1017, the network retains a credible on-chain security and innovation budget.
-
+4. **Sustainable Development Incentives** – Redirecting the `basefee` to the Olympia Treasury enables Ethereum Classic to fund open-source development and long-term protocol maintenance without inflating supply. This ensures that, as block rewards decline under ECIP-1017, the network retains a credible on-chain security and innovation budget.
 
 ### Specification
 
@@ -103,6 +103,13 @@ Testing should include full validation of:
 
 Community coordination is required to finalize testnet and mainnet fork block numbers, along with updated client releases that embed the Olympia fork rules.
 
+### Reference Implementation
+
+- Reference client: [Core-Geth](https://github.com/ethereumclassic/core-geth)
+- EIP-1559 and EIP-3198 are already implemented in Core-Geth (see `olympia-upgrade` branch).
+- Testnet deployment and validation will occur on Mordor prior to mainnet activation.
+
+
 ### EIP Compatibility Scope
 
 The Olympia upgrade is purposefully limited in scope. It includes only the two EIPs relevant to fee market modernization and EVM compatibility (EIP-1559 and EIP-3198).
@@ -150,7 +157,8 @@ This table documents EIPs reviewed but excluded from the Olympia upgrade. EIPs a
 
 ### Backwards Compatibility
 
-The Olympia upgrade introduces a new transaction type and an additional EVM opcode. Legacy transactions and deployed contracts will continue to function without modification. However, nodes that do not upgrade will fall out of consensus once the fork is activated.
+The Olympia upgrade introduces a new transaction type (Type-2) and an additional EVM opcode (`BASEFEE`). Legacy Type-0 transactions and all previously deployed contracts will remain valid and operate as before. However, nodes that do not upgrade will become incompatible and fork from the canonical Ethereum Classic chain upon activation.
+
 
 ### Security Considerations
 
@@ -158,5 +166,5 @@ No new consensus-critical vulnerabilities are introduced by this upgrade. The `B
 
 ## Copyright
 
-Copyright and related rights waived via
+Copyright and related rights waived via  
 [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
