--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -4,86 +4,123 @@ ecip: 1112
 title: Olympia Treasury Contract
 status: Draft
 type: Standards Track
-category: ECBP
+category: Core
+layer: Execution (contract logic)
+requires: 1111
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-06-27
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
-requires: 1111
+license: CC0-1.0
 ---
 
 ### Simple Summary
 
-Redirect the `BASEFEE` introduced by ECIP-1111 from being burned to instead funding a protocol-level smart contract treasury—referred to as the Olympia Treasury. This enables sustainable, on-chain funding for Ethereum Classic without inflation, aligns ecosystem incentives across miners, users, and developers, and establishes a long-term security budget as emissions decline under ECIP-1017.
+Redirect the `BASEFEE` introduced by ECIP-1111 (EIP-1559) into a protocol-defined on-chain treasury contract — the Olympia Treasury — instead of burning it. This enables sustainable, transparent, and decentralized funding for Ethereum Classic’s development, infrastructure, and security, without introducing inflation or trusted intermediaries.
 
 ### Abstract
 
-This ECIP proposes the specification and deployment of a protocol-level smart contract referred to as the Olympia Treasury, which redirects the `BASEFEE` introduced in ECIP-1111 (EIP-1559) into a dedicated on-chain funding contract rather than burning it. This creates a sustainable, transparent, and permissionless development fund for Ethereum Classic. The Treasury is deployed at a protocol-defined address and receives the full `BASEFEE` from each block, enabling native funding of the ecosystem as block rewards diminish under ECIP-1017.
+This ECIP specifies the creation and integration of the Olympia Treasury, a protocol-level smart contract deployed at a fixed address on Ethereum Classic. Upon activation of the Olympia Upgrade (ECIP-1111), all `BASEFEE` revenue from EIP-1559 transactions will be redirected to this treasury contract instead of being burned. The treasury will serve as a decentralized and transparent funding mechanism to support Ethereum Classic’s long-term infrastructure, ecosystem growth, and client development. The contract will be immutable, externally auditable, and interoperable with a permissionless governance system (Olympia DAO) responsible for disbursing funds via on-chain proposals.
 
 ### Motivation
 
-Ethereum Classic lacks an open and decentralized funding mechanism for sustaining public goods, including core protocol development, client maintenance, infrastructure services, ecosystem tooling, and grants. Historically, funding has been limited to off-chain entities or closed treasuries backed by inflationary emissions.
+Ethereum Classic has historically lacked a sustainable, transparent, and decentralized method to fund protocol development, infrastructure, tooling, or community growth. Funding has been dependent on short-lived grants, centralized donors, or nonprofit foundations — many of which have shut down or withdrawn support.
 
-This ECIP enables a permissionless and transparent treasury, funded by existing fees rather than inflation. It aligns incentives across miners, developers, and users and ensures Ethereum Classic retains a long-term security budget and governance pathway as block rewards decline over time.
+With ECIP-1017 reducing block rewards over time, Ethereum Classic must establish a new funding model that does not rely on inflation or centralized discretion. Redirecting the `BASEFEE` from EIP-1559 to the Olympia Treasury enables Ethereum Classic to capture value from network usage and reinvest it into the ecosystem. This aligns incentives between miners, users, and developers, strengthens the long-term security budget, and ensures a credible, on-chain funding pathway for public goods — without compromising immutability or Proof-of-Work.
 
 ### Specification
 
 #### Contract Address
 
-The Olympia Treasury contract SHALL be deployed at a fixed, deterministic address. This address is hardcoded into the consensus rules as the recipient of the `BASEFEE` portion of every block under EIP-1559.
+The Olympia Treasury contract SHALL be deployed at a fixed, deterministic address. This address is hardcoded into Ethereum Classic’s consensus rules as the recipient of the `BASEFEE` defined in ECIP-1111.
 
-- Address (placeholder): `0x0000000000000000000000000000000000OLYMPIA`
+- **Address (placeholder)**: `0x0000000000000000000000000000000000OLYMPIA`
+
+The final address will be derived using the `CREATE` or `CREATE2` opcode during network upgrade coordination and MUST be reproducible by all client implementations.
 
 #### Funding Source
 
-- The full value of the `BASEFEE` as defined by EIP-1559 SHALL be transferred to the Olympia Treasury contract each block.
-
-- This redirect is protocol-level and enforced by client software upon activation of the Olympia hard fork.
+- 100% of the `BASEFEE` collected under EIP-1559 SHALL be transferred to the Olympia Treasury contract.
+- This transfer SHALL occur at the protocol level and be enforced by client consensus rules beginning at the activation block of the Olympia Upgrade (ECIP-1111).
 
 #### Contract Properties
 
-The Olympia Treasury contract MUST:
+The Olympia Treasury contract MUST meet the following conditions:
 
-- Be immutable and non-upgradeable after deployment, with no proxy, delegatecall, or admin modifiers.
-- Support transparent on-chain balance inspection.
-- Emit standard `Transfer` and `Receive` logs for public observability.
-- Contain no externally owned account (EOA) administrative controls or centralized withdrawal methods.
+- Be deployed immutably with no proxy patterns, upgrade hooks, or owner-controlled logic.
+- Include no `selfdestruct` or `delegatecall` mechanisms.
+- Emit standard `Transfer`, `Receive`, and `ProposalExecuted` logs for traceability.
+- Allow public balance and transfer history inspection through standard view methods.
+- Reject all externally owned account (EOA) withdrawals unless authorized through governance execution.
 
 #### Governance Interface
 
-The Treasury SHALL integrate with a DAO contract (Olympia DAO) that:
+The Olympia Treasury SHALL expose a governance interface callable by a designated DAO contract (see ECIP-1113). This interface MUST:
 
-- Proposes and approves funding proposals.
-- Schedules and releases funds via time-locked execution mechanisms.
-- Requires multi-signature or token-weighted governance for withdrawal authorization.
+- Allow for permissionless proposal intake via governance contracts.
+- Schedule approved disbursements via `release()` or `execute()` functions.
+- Support multi-step workflows such as milestone-based vesting or time-locked execution.
+- Log all governance actions transparently on-chain.
 
-Interoperability SHALL be implemented via standard function selectors (`propose()`, `release()`, `execute()`) callable by governance contracts. Details of the Olympia DAO may evolve independently but MUST remain permissionlessly interoperable with the Treasury.
-
-#### Activation Block
-
-The redirection of `BASEFEE` to the Olympia Treasury SHALL activate at the same block height as ECIP-1111 (Olympia Upgrade).
+The Treasury contract MUST NOT include embedded governance logic. Instead, it SHALL serve as a funding vault governed externally by Olympia DAO through composable smart contract interactions.
 
 ### Rationale
 
-- **Security Budget**: Ensures Ethereum Classic has a sustainable source of funding beyond finite emissions.
-- **Neutrality**: Avoids inflation or privileged allocations; BASEFEE is collected from all users and is verifiable on-chain.
-- **Alignment**: Connects miners, developers, and users to the same on-chain economy, reinforcing mutual benefit.
-- **Governance Flexibility**: Enables community-controlled allocation of fees toward ecosystem growth.
-- **Transparency**: All funding flows are visible and verifiable on-chain, avoiding opaque off-chain grants.
+The Olympia Treasury contract serves as the cornerstone of Ethereum Classic’s transition to a sustainable, self-funded ecosystem. Its design reflects several key priorities:
+
+- **Security Budget**: As block rewards decline under ECIP-1017, Ethereum Classic requires a durable, non-inflationary funding source. Redirecting `BASEFEE` ensures the network retains a native mechanism to support client maintenance, audits, infrastructure, and protocol upgrades.
+
+- **Incentive Alignment**: By linking developer funding to on-chain activity, the Olympia model creates a positive feedback loop: more dApps and users → more transactions → more treasury funding → better tooling and development → more adoption.
+
+- **Permissionless Participation**: Unlike past funding efforts that relied on closed foundations or private donors, the Olympia Treasury enables any qualified participant to seek support through a public, merit-based process.
+
+- **Transparency and Accountability**: All inflows, proposals, votes, and disbursements occur entirely on-chain. This eliminates ambiguity, prevents favoritism, and builds community trust in how protocol revenues are allocated.
+
+- **Governance Modularity**: Decoupling treasury logic from governance logic allows flexibility in upgrading or replacing governance contracts (e.g. Olympia DAO) without altering the Treasury contract itself. This modularity protects against capture, mismanagement, or design flaws in any single governance system.
+
+The result is a system that reflects Ethereum Classic’s values — decentralization, transparency, sovereignty — while ensuring it can grow and compete in the modern EVM landscape.
 
 ### Implementation
 
-To be implemented in [Core-Geth](https://github.com/ethereumclassic/core-geth).
+The Olympia Treasury will be implemented in the [Core-Geth](https://github.com/ethereumclassic/core-geth) client as part of the Olympia network upgrade.
 
-- Treasury contract bytecode and deterministic address generation scripts will be included in the Olympia fork activation PR.
-- Example test cases will be provided to validate correct `BASEFEE` redirection.
+Client changes include:
+
+- Hardcoding the Treasury contract address in consensus logic as the recipient of the `BASEFEE` in each block.
+- Redirecting the `BASEFEE` from EIP-1559 transactions to this address instead of burning it.
+- Ensuring gas accounting, consensus rules, and transaction validation logic reflect this redirect accurately.
+
+The Treasury contract’s bytecode and deterministic deployment address will be published in the Olympia upgrade release and audited prior to mainnet deployment.
+
+Test cases will be included to validate:
+
+- Proper `BASEFEE` transfer to the treasury address on each block
+- Balance tracking and event emission from the contract
+- Compatibility with governance contract interfaces (`propose()`, `release()`, `execute()`)
+- Full testnet replay and consensus validation via Mordor deployments
 
 ### Backwards Compatibility
 
-This ECIP is not backward-compatible. It alters the default behavior of EIP-1559 by redirecting the `BASEFEE` instead of burning it. Client software MUST implement this redirect as part of the Olympia hard fork.
+The Olympia Treasury contract introduces a change in the default behavior of EIP-1559 by redirecting the `BASEFEE` to a treasury contract instead of burning it. This alters the consensus logic for fee handling and requires clients to implement the redirect as part of the Olympia upgrade.
+
+Legacy nodes that do not upgrade will remain unaware of the treasury address and will burn the `BASEFEE` instead, resulting in a permanent consensus fork. All mainnet participants must upgrade their clients to maintain network compatibility.
+
+This change does not impact legacy transaction formats (Type-0) or smart contracts that do not interact with the treasury. It is fully forward-compatible with existing tooling and dApps.
 
 ### Security Considerations
 
-No new consensus-critical vulnerabilities are introduced by this upgrade. The `BASEFEE` opcode and EIP-1559 transaction format have been widely adopted and audited across the EVM ecosystem. Core-Geth implementers are advised to validate integration against existing test vectors and consensus tests.
+The Olympia Treasury contract must be implemented with strict security guarantees:
+
+- **No Upgradability or Admin Keys**: The contract MUST be immutable, with no proxy, delegatecall, or admin modifiers that allow for privileged access or modification after deployment.
+
+- **On-Chain Verification**: All inbound and outbound transactions are recorded transparently on-chain. This ensures that treasury balances and disbursements are fully auditable by the community.
+
+- **DAO Integration Risk**: Governance failures (e.g., malicious proposals or collusion) are possible at the DAO layer. While outside the scope of this ECIP, best practices in DAO design—such as proposal review periods, multi-sig controls, and on-chain voting—should be implemented to minimize abuse.
+
+- **Client Enforcement**: Clients must enforce protocol-level redirection of the `BASEFEE` to the treasury. Failing to do so risks consensus divergence and breaks compatibility with the canonical Ethereum Classic chain.
+
+- **Replay Protection**: As with all hard forks, clients must ensure proper transaction replay protection for cross-fork safety.
+
+Extensive testing on Mordor Testnet will precede mainnet deployment to validate correct redirection logic, contract immutability, and integration with the Olympia DAO governance system.
 
 ### Copyright
 
