--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -5,7 +5,7 @@ title: Olympia EVM and Protocol Upgrades
 status: Draft
 type: Standards Track
 category: Core
-layer: Consensus (hard fork)
+layer: Consensus
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-04-30
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
