--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -5,7 +5,7 @@ title: Olympia Treasury Contract
 status: Draft
 type: Standards Track
 category: Core
-layer: Execution (contract logic)
+layer: Execution
 requires: 1111
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-06-27
