--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -5,7 +5,7 @@ title: Olympia DAO Governance Framework
 status: Draft
 type: Standards Track
 category: Governance
-layer: Governance (on-chain coordination)
+layer: Governance
 requires: 1111, 1112
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-06-30
