--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -1,11 +1,11 @@
 ---
 lang: en
 ecip: 1114
-title: Ethereum Classic Funding Proposal Process (ECFP)
+title: Ethereum Classic Funding Proposal Process
 status: Draft
 type: Process
 category: Governance
-layer: Governance (proposal lifecycle)
+layer: Governance
 requires: 1111, 1112, 1113
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
