--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -4,8 +4,7 @@ ecip: 1112
 title: Olympia Treasury Contract
 status: Draft
 type: Standards Track
-category: Core
-layer: Execution
+category: Meta
 requires: 1111
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-06-27
