--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -4,15 +4,13 @@ ecip: 1113
 title: Olympia DAO Governance Framework
 status: Draft
 type: Standards Track
-category: Governance
-layer: Governance
+category: Meta
 requires: 1111, 1112
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-06-30
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
 license: CC0-1.0
 ---
-
 
 ### Simple Summary
 
