--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -3,9 +3,8 @@ lang: en
 ecip: 1114
 title: Ethereum Classic Funding Proposal Process
 status: Draft
-type: Process
-category: Governance
-layer: Governance
+type: Standards Track
+category: Meta
 requires: 1111, 1112, 1113
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
