--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -3,8 +3,7 @@ lang: en
 ecip: 1111
 title: Olympia EVM and Protocol Upgrades
 status: Draft
-type: Standards Track
-category: Meta
+type: Meta
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-04-30
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
