--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -3,8 +3,7 @@ lang: en
 ecip: 1112
 title: Olympia Treasury Contract
 status: Draft
-type: Standards Track
-category: Meta
+type: Meta
 requires: 1111
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-06-27
