--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -3,8 +3,7 @@ lang: en
 ecip: 1113
 title: Olympia DAO Governance Framework
 status: Draft
-type: Standards Track
-category: Meta
+type: Meta
 requires: 1111, 1112
 author: Cody Burns (@dontpanicburns), Chris Mercer (@chris-mercer)
 created: 2025-06-30
