--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -100,7 +100,7 @@ Test cases will be included to validate:
 
 The Olympia Treasury contract introduces a change in the default behavior of EIP-1559 by redirecting the `BASEFEE` to a treasury contract instead of burning it. This alters the consensus logic for fee handling and requires clients to implement the redirect as part of the Olympia upgrade.
 
-Legacy nodes that do not upgrade will remain unaware of the treasury address and will burn the `BASEFEE` instead, resulting in a permanent consensus fork. All mainnet participants must upgrade their clients to maintain network compatibility.
+Legacy nodes that do not upgrade will remain unaware of EIP-1559 (Type-2) transactions and the treasury address, resulting in a permanent consensus fork. All mainnet participants must upgrade their clients to maintain network compatibility.
 
 This change does not impact legacy transaction formats (Type-0) or smart contracts that do not interact with the treasury. It is fully forward-compatible with existing tooling and dApps.
 
