--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -128,7 +128,7 @@ Key implementation elements include:
 
 #### 1. Proposal Submission
 
-- A dedicated ECFP submission portal SHALL be provided at `https://ethereumclassic.org/ecfp`.
+- A dedicated ECFP submission portal SHALL be provided at `https://github.com/ethereumclassic/ECFPs`.
 - Proposals MUST include a valid ECFP number (assigned sequentially), title, rationale, funding amount, recipient address, and milestone schedule.
 - Metadata pointers (e.g., IPFS, Arweave) SHALL be used for full-text proposal storage and human-readable content.
 
